# bperf

./: .gitignore  README.md  pyproject.toml
bperf/: curve.py  flows.py  report.py
bperf/discount/: __init__.py  discount.py  sequence.py
bperf/money/: money.py  sequence.py
bperf/percent/: __init__.py  percent.py  sequence.py
bperf/performance/: __init__.py  generic.py  performance.py  residual.py  total.py
bperf/performance/effect/: __init__.py  carry.py  curve.py  effect.py  spread.py
bperf/priced/: __init__.py  priced.py
bperf/priced/points/: __init__.py  points.py  sequence.py
bperf/pv/: __init__.py  pv.py  sequence.py
bperf/rate/continuous/: __init__.py  continuous.py  sequence.py
bperf/rate/periodic/: __init__.py  periodic.py  sequence.py
bperf/term/: __init__.py  sequence.py  term.py
bperf/termed/: __init__.py  sequence.py  termed.py
bperf/utilities/: sequence.py
tests/: test_bperf.py  test_curve.py  test_flows.py  test_report.py
tests/discount/: test_discount_discount.py
tests/money/: test_money_money.py  test_money_sequence.py
tests/percent/: test_percent_percent.py  test_percent_sequence.py
tests/performance/: test_func_performance_performance.py  test_performance_generic.py  test_performance_performance.py  test_performance_residual.py  test_performance_total.py
tests/priced/: test_priced_priced.py
tests/pv/: test_pv_pv.py  test_pv_sequence.py
tests/term/: test_term_sequence.py  test_term_term.py
tests/termed/: test_termed_sequence.py  test_termed_termed.py
tests/utilities/: test_utilities_sequence.py
(+21 files in other folders)
